2023-07-21T08:19:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5620197664 # 1043
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-21
* notice: last 14d: unq all: 10 46
* notice: prev accum: outdated-unq outdated-all / unq all: 391 692 / 421 736
* notice: next accum: outdated-unq outdated-all / unq all: 391 692 / 423 738
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-07-21]

2023-07-20T16:20:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5613460094 # 1041
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 10 44
* notice: prev accum: outdated-unq outdated-all / unq all: 391 692 / 421 735
* notice: next accum: outdated-unq outdated-all / unq all: 391 692 / 421 736
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-07-20]

2023-07-20T08:19:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5608599738 # 1040
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-20
* notice: last 14d: unq all: 10 43
* notice: prev accum: outdated-unq outdated-all / unq all: 390 691 / 420 734
* notice: next accum: outdated-unq outdated-all / unq all: 391 692 / 421 735
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-07-06] / [2023-07-20]

2023-07-20T01:23:40Z: