@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-09T01:56:15Z",
-  "count" : 3,
+  "timestamp" : "2023-07-22T01:23:49Z",
+  "count" : 2,
   "count_minmax" : [ 2, 3 ],
-  "count_decinc" : [ -0, +3 ],
-  "uniques" : 3,
+  "count_decinc" : [ -1, +3 ],
+  "uniques" : 2,
   "uniques_minmax" : [ 2, 3 ],
-  "uniques_decinc" : [ -0, +3 ]
+  "uniques_decinc" : [ -1, +3 ]
 }
