@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2023-07-21T08:19:19Z",
+  "timestamp" : "2023-07-22T01:23:49Z",
   "count_outdated" : 692,
   "uniques_outdated" : 391,
-  "count" : 738,
+  "count" : 739,
   "uniques" : 423,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 0, 3 ],
-      "uniques": 3,
+      "count_decinc": [ 1, 3 ],
+      "uniques": 2,
       "uniques_minmax": [ 2, 3 ],
-      "uniques_decinc": [ 0, 3 ]
+      "uniques_decinc": [ 1, 3 ]
     },
     {
       "timestamp": "2023-07-09T00:00:00Z",
@@ -124,9 +124,9 @@
     },
     {
       "timestamp": "2023-07-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
