@@ -1,11 +1,11 @@
 {
   "count": 46,
-  "uniques": 10,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2023-07-08T00:00:00Z",
-      "count": 3,
-      "uniques": 3
+      "count": 2,
+      "uniques": 2
     },
     {
       "timestamp": "2023-07-09T00:00:00Z",
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2023-07-21T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
